--- a/css/estilo.css
+++ b/css/estilo.css
@@ -13,6 +13,16 @@
 	font-family: "Ravie", serif;
 	color: white;
 	font-size: 400%;
+	margin-bottom: 0%;
+}
+
+span{
+	color: orange;
+	text-shadow: 2px  0px 0px black,
+               0px  2px 0px black,
+              -2px  0px 0px black,
+               0px -2px 0px black;
+    text-decoration: none;
 }
 
 nav{
@@ -33,8 +43,15 @@ nav div{
 }
 
 main{
+	margin-top: 80px;
 	margin-right: 5%;
 	margin-left: 5%;
+	font-family: "Pato", serif;
+	color: white;
+	text-shadow: 1px  0px 0px black,
+               0px  1px 0px black,
+              -1px  0px 0px black,
+               0px -1px 0px black;
 }
 
 footer{
@@ -43,10 +60,19 @@ footer{
 
 body{
 	line-height: 1.6;
+	background-color: rgb(0, 73, 140);
 }
 
 header{
 	padding-bottom: 1%;
+}
+
+table{
+	width: 100%;
+}
+
+#arte{
+	text-align: center;
 }
 
 #back{
@@ -77,6 +103,7 @@ font-size: 150%;
 	text-align: center;
 	font-family: "Ravie", serif;
 	line-height: 1.4;
+	margin-top: 0%;
 }
 
 
@@ -86,7 +113,7 @@ font-size: 150%;
 }
 
 .menu2{
-	color: black;
+	color: white;
 	text-decoration: none;
 }
 
@@ -96,7 +123,11 @@ font-size: 150%;
 }
 
 .menu2:hover{
-	color: red;
+	color: orange;
+	text-shadow: 2px  0px 0px black,
+               0px  2px 0px black,
+              -2px  0px 0px black,
+               0px -2px 0px black;
 	text-decoration: none;
 }
 
@@ -143,10 +174,13 @@ footer{
 aside{
 	position: fixed;
 	z-index: 1;
-	padding: 5%;
 	width: 20%;
-	top: 0%;
-	left: -5%;
+	top: 60px;
+	color: white;
+	text-shadow: 1px  0px 0px black,
+               0px  1px 0px black,
+              -1px  0px 0px black,
+               0px -1px 0px black;
 }
 
 #dibujos{
@@ -165,6 +199,13 @@ aside{
 	}
 }
 
+@media screen and (max-width: 1000px){
+
+	aside{
+		font-size: 70%;
+	}
+}
+
 
 @media screen and (max-width: 500px){
 	.lema{
@@ -176,81 +217,5 @@ aside{
 	}
 
 	nav div{
-		font-size: 45%;
+		font-size: 70%;
 	}
-=======
-@font-face{
-	font-family: "Ravie";
-	src: url("../fonts/RAVIE.TTF") format("opentype");
-}
-
-.titulo{
-	text-align: center;
-	font-family: "Ravie", serif;
-	color: white;
-	font-size: 400%;
-}
-
-nav{
-	background-color: black;
-	text-align: center;
-	word-spacing: 300px;
-	padding-top: 15px;
-	padding-bottom: 10px;
-	border-bottom: 10px solid green;
-	color: white;
-}
-
-main{
-	margin-right: 5%;
-	margin-left: 5%;
-	margin-top: 2%;
-}
-
-footer{
-	text-align: center;
-}
-
-#back{
-width: 100%;
-height: 100%;
-position: fixed;
-left: -0.01%;
-top: -0.01%;
-background-color: lightblue;
-}
-
-#texto{
-width: 100%;
-position: absolute;
-left: -0.01%;
-top: -0.01%;
-}
-
-.principal{
-	float: left;
-	margin-left: 20%;
-}
-
-.lema{
-	color: rgb(240, 124, 0);
-	display: inline-block;
-	margin-left: 15%;
-	margin-top: 7%;
-	text-align: center;
-	font-family: "Ravie", serif;
-}
-
-
-.menu{
-	color: white;
-	text-decoration: none;
-}
-
-.menu:hover{
-	color: lightblue;
-	text-decoration: none;
-}
-.lado{
-	float: left;
-}
